bin_PROGRAMS = gnome-photos

gnome_photos_built_sources = \
	photos-about-data.c \
	photos-about-data.h \
	photos-enums.c \
	photos-enums.h \
	photos-dleyna-renderer-device.c \
	photos-dleyna-renderer-device.h \
	photos-dleyna-renderer-manager.c \
	photos-dleyna-renderer-manager.h \
	photos-dleyna-renderer-push-host.c \
	photos-dleyna-renderer-push-host.h \
	photos-gom-miner.c \
	photos-gom-miner.h \
	photos-marshalers.c \
	photos-marshalers.h \
	photos-mpris-player.c \
	photos-mpris-player.h \
	photos-resources.c \
	photos-resources.h \
	photos-shell-search-provider2.c \
	photos-shell-search-provider2.h \
	photos-tracker-extract-priority.c \
	photos-tracker-extract-priority.h \
	photos-tracker-resources.c \
	photos-tracker-resources.h \
	$(NULL)

nodist_gnome_photos_SOURCES = \
	$(gnome_photos_built_sources) \
	$(NULL)

gnome_photos_SOURCES = \
	photos-application.c \
	photos-application.h \
	photos-base-manager.c \
	photos-base-manager.h \
	photos-base-model.c \
	photos-base-model.h \
	photos-base-item.c \
	photos-base-item.h \
	photos-camera-cache.c \
	photos-camera-cache.h \
	photos-collection-icon-watcher.c \
	photos-collection-icon-watcher.h \
	photos-create-collection-icon-job.c \
	photos-create-collection-icon-job.h \
	photos-create-collection-job.c \
	photos-create-collection-job.h \
	photos-debug.c \
	photos-debug.h \
	photos-delete-item-job.c \
	photos-delete-item-job.h \
	photos-delete-notification.c \
	photos-delete-notification.h \
	photos-dlna-renderer.c \
	photos-dlna-renderer.h \
	photos-dlna-renderers-dialog.c \
	photos-dlna-renderers-dialog.h \
	photos-dlna-renderers-manager.c \
	photos-dlna-renderers-manager.h \
	photos-dropdown.c \
	photos-dropdown.h \
	photos-export-dialog.c \
	photos-export-dialog.h \
	photos-edit-palette.c \
	photos-edit-palette.h \
	photos-edit-palette-row.c \
	photos-edit-palette-row.h \
	photos-embed.c \
	photos-embed.h \
	photos-empty-results-box.c \
	photos-empty-results-box.h \
	photos-error-box.c \
	photos-error-box.h \
	photos-facebook-item.c \
	photos-facebook-item.h \
	photos-fetch-collection-state-job.c \
	photos-fetch-collection-state-job.h \
	photos-fetch-collections-job.c \
	photos-fetch-collections-job.h \
	photos-fetch-ids-job.c \
	photos-fetch-ids-job.h \
	photos-fetch-metas-job.c \
	photos-fetch-metas-job.h \
	photos-filterable.c \
	photos-filterable.h \
	photos-flickr-item.c \
	photos-flickr-item.h \
	photos-google-item.c \
	photos-google-item.h \
	photos-header-bar.c \
	photos-header-bar.h \
	photos-icons.h \
	photos-image-view.c \
	photos-image-view.h \
	photos-indexing-notification.c \
	photos-indexing-notification.h \
	photos-item-manager.c \
	photos-item-manager.h \
	photos-jpeg-count.c \
	photos-jpeg-count.h \
	photos-local-item.c \
	photos-local-item.h \
	photos-main-toolbar.c \
	photos-main-toolbar.h \
	photos-main-window.c \
	photos-main-window.h \
	photos-media-server-item.c \
	photos-media-server-item.h \
	photos-notification-manager.c \
	photos-notification-manager.h \
	photos-offset-collections-controller.c \
	photos-offset-collections-controller.h \
	photos-offset-controller.c \
	photos-offset-controller.h \
	photos-offset-favorites-controller.c \
	photos-offset-favorites-controller.h \
	photos-offset-overview-controller.c \
	photos-offset-overview-controller.h \
	photos-offset-search-controller.c \
	photos-offset-search-controller.h \
	photos-operation-insta-common.h \
	photos-operation-insta-curve.c \
	photos-operation-insta-curve.h \
	photos-operation-insta-filter.c \
	photos-operation-insta-filter.h \
	photos-operation-insta-hefe.c \
	photos-operation-insta-hefe.h \
	photos-operation-insta-hefe-curve.c \
	photos-operation-insta-hefe-curve.h \
	photos-operation-insta-hefe-vignette.c \
	photos-operation-insta-hefe-vignette.h \
	photos-operation-jpg-guess-sizes.c \
	photos-operation-jpg-guess-sizes.h \
	photos-operation-png-guess-sizes.c \
	photos-operation-png-guess-sizes.h \
	photos-operation-saturation.c \
	photos-operation-saturation.h \
	photos-organize-collection-dialog.c \
	photos-organize-collection-dialog.h \
	photos-organize-collection-model.c \
	photos-organize-collection-model.h \
	photos-organize-collection-view.c \
	photos-organize-collection-view.h \
	photos-overview-searchbar.c \
	photos-overview-searchbar.h \
	photos-pipeline.c \
	photos-pipeline.h \
	photos-png-count.c \
	photos-png-count.h \
	photos-preview-model.c \
	photos-preview-model.h \
	photos-preview-nav-buttons.c \
	photos-preview-nav-buttons.h \
	photos-preview-view.c \
	photos-preview-view.h \
	photos-print-notification.c \
	photos-print-notification.h \
	photos-print-operation.c \
	photos-print-operation.h \
	photos-print-preview.c \
	photos-print-preview.h \
	photos-print-setup.c \
	photos-print-setup.h \
	photos-properties-dialog.c \
	photos-properties-dialog.h \
	photos-query.c \
	photos-query.h \
	photos-query-builder.h \
	photos-query-builder.c \
	photos-remote-display-manager.c \
	photos-remote-display-manager.h \
	photos-search-context.c \
	photos-search-context.h \
	photos-search-controller.c \
	photos-search-controller.h \
	photos-search-match.c \
	photos-search-match.h \
	photos-search-match-manager.c \
	photos-search-match-manager.h \
	photos-search-provider.c \
	photos-search-provider.h \
	photos-search-type.c \
	photos-search-type.h \
	photos-search-type-manager.c \
	photos-search-type-manager.h \
	photos-searchbar.c \
	photos-searchbar.h \
	photos-selection-controller.c \
	photos-selection-controller.h \
	photos-selection-toolbar.c \
	photos-selection-toolbar.h \
	photos-set-collection-job.c \
	photos-set-collection-job.h \
	photos-settings.c \
	photos-settings.h \
	photos-single-item-job.c \
	photos-single-item-job.h \
	photos-source.c \
	photos-source.h \
	photos-source-manager.c \
	photos-source-manager.h \
	photos-spinner-box.c \
	photos-spinner-box.h \
	photos-tool.c \
	photos-tool.h \
	photos-tool-colors.c \
	photos-tool-colors.h \
	photos-tool-crop.c \
	photos-tool-crop.h \
	photos-tool-enhance.c \
	photos-tool-enhance.h \
	photos-tool-filter-button.c \
	photos-tool-filter-button.h \
	photos-tool-filters.c \
	photos-tool-filters.h \
	photos-tracker-change-event.c \
	photos-tracker-change-event.h \
	photos-tracker-change-monitor.c \
	photos-tracker-change-monitor.h \
	photos-tracker-collections-controller.c \
	photos-tracker-collections-controller.h \
	photos-tracker-controller.c \
	photos-tracker-controller.h \
	photos-tracker-favorites-controller.c \
	photos-tracker-favorites-controller.h \
	photos-tracker-overview-controller.c \
	photos-tracker-overview-controller.h \
	photos-tracker-search-controller.c \
	photos-tracker-search-controller.h \
	photos-tracker-queue.c \
	photos-tracker-queue.h \
	photos-update-mtime-job.c \
	photos-update-mtime-job.h \
	photos-utils.c \
	photos-utils.h \
	photos-view-container.c \
	photos-view-container.h \
	photos-view-model.c \
	photos-view-model.h \
	photos-widget-shader.c \
	photos-widget-shader.h \
	photos-main.c \
	$(NULL)

BUILT_SOURCES = \
	$(gnome_photos_built_sources) \
	$(NULL)

EXTRA_DIST = \
	org.gnome.ShellSearchProvider2.xml \
	photos-enums.c.template \
	photos-enums.h.template \
	photos-generate-about \
	photos.gresource.xml \
	photos-dlna-renderers-dialog.ui \
	photos-export-dialog.ui \
	photos-help-overlay.ui \
	photos-marshalers.list \
	photos-menus.ui \
	photos-preview-menu.ui \
	photos-selection-menu.ui \
	photos-selection-toolbar.ui \
	photos-gom-miner.xml \
	photos-tracker-extract-priority.xml \
	photos-tracker-resources.xml \
	photos-dleyna-renderer-device.xml \
	photos-dleyna-renderer-manager.xml \
	photos-dleyna-renderer-push-host.xml \
	photos-mpris-player.xml \
	$(NULL)

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
	$(BABL_CFLAGS) \
	$(CAIRO_CFLAGS) \
	$(GDATA_CFLAGS) \
	$(GDK_PIXBUF_CFLAGS) \
	$(GFBGRAPH_CFLAGS) \
	$(GEGL_CFLAGS) \
	$(GEXIV2_CFLAGS) \
	$(GIO_CFLAGS) \
	$(GLIB_CFLAGS) \
	$(GNOME_DESKTOP_CFLAGS) \
	$(GOA_CFLAGS) \
	$(GRILO_CFLAGS) \
	$(GTK_CFLAGS) \
	$(GTK_UNIX_PRINT_CFLAGS) \
	$(PNG_CFLAGS) \
	$(TRACKER_CFLAGS) \
	-I$(top_srcdir)/libgd \
	$(NULL)

AM_CFLAGS = \
	$(WARN_CFLAGS) \
	$(NULL)

gnome_photos_LDFLAGS = \
	$(WARN_LDFLAGS) \
	$(NULL)

gnome_photos_LDADD = \
	$(BABL_LIBS) \
	$(CAIRO_LIBS) \
	$(GDATA_LIBS) \
	$(GDK_PIXBUF_LIBS) \
	$(GFBGRAPH_LIBS) \
	$(GEGL_LIBS) \
	$(GEXIV2_LIBS) \
	$(GIO_LIBS) \
	$(GLIB_LIBS) \
	$(GNOME_DESKTOP_LIBS) \
	$(GOA_LIBS) \
	$(GRILO_LIBS) \
	$(GTK_LIBS) \
	$(GTK_UNIX_PRINT_LIBS) \
	$(JPEG_LIBS) \
	$(PNG_LIBS) \
	$(TRACKER_LIBS) \
	$(LIBM) \
	$(top_builddir)/libgd/libgd.la \
	$(NULL)

CLEANFILES = \
	$(BUILT_SOURCES) \
	stamp-photos-about-data.h \
	stamp-photos-enums.h \
	stamp-photos-marshalers.h \
	xgen-ac \
	xgen-ah \
	xgen-etbc \
	xgen-etbh \
	xgen-gmc \
	xgen-gmh \
	xgen-tmc \
	xgen-tmh \
	$(NULL)

photos-about-data.h: stamp-photos-about-data.h
	@true

stamp-photos-about-data.h: $(top_srcdir)/ARTISTS $(top_builddir)/AUTHORS
	$(AM_V_GEN) ( \
		( $(srcdir)/photos-generate-about \
			--header $(top_builddir) $(top_srcdir) \
                ) >> xgen-ah \
		&& ( cmp -s xgen-ah photos-about-data.h || cp xgen-ah photos-about-data.h ) \
		&& rm -f xgen-ah \
		&& echo timestamp > $(@F) \
	)

photos-about-data.c: $(top_srcdir)/ARTISTS $(top_builddir)/AUTHORS
	$(AM_V_GEN) ( \
		echo "#include \"photos-about-data.h\"" > xgen-ac \
		&& ( $(srcdir)/photos-generate-about \
			--body $(top_builddir) $(top_srcdir) \
                   ) >> xgen-ac \
		&& ( cmp -s xgen-ac photos-about-data.c || cp xgen-ac photos-about-data.c ) \
		&& rm -f xgen-ac \
	)

photos-enums.h: stamp-photos-enums.h
	@true

stamp-photos-enums.h: photos-enums.h.template
	$(AM_V_GEN) ( \
		( glib-mkenums \
			--template $(srcdir)/photos-enums.h.template \
                        $(srcdir)/photos-item-manager.h \
                        $(srcdir)/photos-operation-insta-common.h \
                ) >> xgen-etbh \
		&& ( cmp -s xgen-etbh photos-enums.h || cp xgen-etbh photos-enums.h ) \
		&& rm -f xgen-etbh \
		&& echo timestamp > $(@F) \
	)

photos-enums.c: photos-enums.c.template
	$(AM_V_GEN) ( \
		( glib-mkenums \
			--template $(srcdir)/photos-enums.c.template \
                        $(srcdir)/photos-item-manager.h \
                        $(srcdir)/photos-operation-insta-common.h \
                ) >> xgen-etbc \
		&& ( cmp -s xgen-etbc photos-enums.c || cp xgen-etbc photos-enums.c ) \
		&& rm -f xgen-etbc \
	)

photos-marshalers.h: stamp-photos-marshalers.h
	@true

stamp-photos-marshalers.h: photos-marshalers.list Makefile
	$(AM_V_GEN) ( \
		( glib-genmarshal \
			--prefix=_photos_marshal \
			--header $(srcdir)/photos-marshalers.list \
		) >> xgen-tmh \
		&& ( cmp -s xgen-tmh photos-marshalers.h || cp xgen-tmh photos-marshalers.h ) \
		&& rm -f xgen-tmh \
		&& echo timestamp > $(@F) \
	)

photos-marshalers.c: photos-marshalers.list photos-marshalers.h Makefile
	$(AM_V_GEN) ( \
		echo "#include \"photos-marshalers.h\"" > xgen-tmc \
		&& ( glib-genmarshal \
			--prefix=_photos_marshal \
			--body $(srcdir)/photos-marshalers.list \
		   ) >> xgen-tmc \
		&& cp xgen-tmc photos-marshalers.c \
		&& rm -f xgen-tmc \
	)

photos-resources.c: photos.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(srcdir)/photos.gresource.xml)
	$(AM_V_GEN)$(GLIB_COMPILE_RESOURCES) --target=$@ \
		--c-name photos \
		--sourcedir=$(srcdir) \
		--generate-source \
		$<

photos-resources.h: photos.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(srcdir)/photos.gresource.xml)
	$(AM_V_GEN)$(GLIB_COMPILE_RESOURCES) --target=$@ \
		--c-name photos \
		--sourcedir=$(srcdir) \
		--generate-header \
		$<

photos-dleyna-renderer-device.h photos-dleyna-renderer-device.c: photos-dleyna-renderer-device.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Dleyna \
		--generate-c-code photos-dleyna-renderer-device \
		--interface-prefix com.intel.dLeynaRenderer. \
		--annotate 'com.intel.dLeynaRenderer.RendererDevice.GetIcon()[Bytes]' org.gtk.GDBus.C.ForceGVariant true \
		$<

photos-dleyna-renderer-manager.h photos-dleyna-renderer-manager.c: photos-dleyna-renderer-manager.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace DleynaRenderer \
		--generate-c-code photos-dleyna-renderer-manager \
		--interface-prefix com.intel.dLeynaRenderer. \
		$<

photos-dleyna-renderer-push-host.h photos-dleyna-renderer-push-host.c: photos-dleyna-renderer-push-host.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace DleynaRenderer \
		--generate-c-code photos-dleyna-renderer-push-host \
		--interface-prefix com.intel.dLeynaRenderer. \
		$<

photos-gom-miner.h photos-gom-miner.c: photos-gom-miner.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Gom \
		--generate-c-code photos-gom-miner \
		--interface-prefix org.gnome.OnlineMiners. \
		$<

photos-mpris-player.h photos-mpris-player.c: photos-mpris-player.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Mpris \
		--generate-c-code photos-mpris-player \
		--interface-prefix org.mpris.MediaPlayer2. \
		$<

photos-shell-search-provider2.h photos-shell-search-provider2.c: org.gnome.ShellSearchProvider2.xml Makefile
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Shell \
		--generate-c-code photos-shell-search-provider2 \
		--interface-prefix org.gnome.Shell. \
		$<

photos-tracker-extract-priority.h photos-tracker-extract-priority.c: photos-tracker-extract-priority.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Tracker \
		--generate-c-code photos-tracker-extract-priority \
		--interface-prefix org.freedesktop.Tracker1. \
		$(srcdir)/photos-tracker-extract-priority.xml

photos-tracker-resources.h photos-tracker-resources.c: photos-tracker-resources.xml
	$(AM_V_GEN)gdbus-codegen \
		--c-namespace Tracker \
		--generate-c-code photos-tracker-resources \
		--interface-prefix org.freedesktop.Tracker1. \
		$(srcdir)/photos-tracker-resources.xml

-include $(top_srcdir)/git.mk
